--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* header */
 header {
   border-bottom: 1px solid #e4e4e4;
-  display: flex;
+  width: 92%;
   padding: 10px;
   height: 7%;
   box-sizing: border-box;
@@ -10,6 +10,7 @@ header > h1 {
   display: inline-block;
   height: 100%;
   flex-grow: 1;
+  margin: left 10px;
 }
 .fa-calendar-check {
   color: #198754;
@@ -29,6 +30,9 @@ header > h1 > span {
   color: #198754;
   display: inline-block;
   margin: 0 20px;
+}
+.header-right {
+  float: right;
 }
 
 /* content right */
@@ -66,7 +70,7 @@ header > h1 > span {
 .right-main .todo-wrap .input-form .input-box {
   width: 90%;
   height: 50px;
-  font-size: 20px;
+  font-size: 15px;
   border: 0;
   border-bottom: 2px dashed #198754;
   margin-bottom: 30px;
