--- a/style_daily_plan.css
+++ b/style_daily_plan.css
@@ -108,11 +108,11 @@ td {
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-/*#main {
-      transition: margin-left .5s;
+.cont-right {
+      transition: margin-right .5s;
       padding: 20px;
   }
-*/
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {
